--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.3.0
+Flask>=2.3.0
 gunicorn==21.2.0
 scikit-learn>=1.3.0
 pandas>=2.0.3
@@ -8,5 +8,5 @@ matplotlib>=3.7.2
 seaborn>=0.12.2
 plotly>=5.9.0
 wordcloud==1.9.2
-Werkzeug==3.0.1 
+Werkzeug<=3.0.1 
 Flask-Login==0.6.3
