--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Python==3.11.5
-Flask==2.2.0
+connexion[swagger-ui]<3
+Flask>=2.2.0
 gunicorn==21.2.0
 scikit-learn>=1.3.0
 pandas>=2.0.3
@@ -10,5 +11,3 @@ seaborn>=0.12.2
 plotly>=5.9.0
 wordcloud==1.9.2
 Werkzeug==2.2.2
-Flask-Login==0.6.3
-Flask-WTF==1.2.1
