--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Python==3.11.5
+python==3.11.5
 connexion[swagger-ui]<3
 Flask>=2.0.1
 gunicorn==21.2.0
@@ -10,4 +10,4 @@ matplotlib>=3.7.2
 seaborn>=0.12.2
 plotly>=5.9.0
 wordcloud==1.9.2
-Werkzeug==2.2.2
+werkzeug==2.2.2
