--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-python==3.11.5
-connexion[swagger-ui]<3
 Flask>=2.0.1
 gunicorn==21.2.0
 scikit-learn>=1.3.0
@@ -10,4 +8,4 @@ matplotlib>=3.7.2
 seaborn>=0.12.2
 plotly>=5.9.0
 wordcloud==1.9.2
-werkzeug==2.2.2
+Werkzeug==2.0.1
